Wiki/CDML/tmp/parser.out
shift/reduce conflict in state 6 resolved as shift.
shift/reduce conflict in state 6 resolved as shift.


Unused terminals:

   ESCAPEDBRA

Grammar

Rule 1     text -> termlist
Rule 2     termlist -> term
Rule 3     termlist -> term termlist
Rule 4     term -> elselist
Rule 5     elselist -> else
Rule 6     elselist -> else elselist
Rule 7     else -> ELSE
Rule 8     else -> EQUALS
Rule 9     term -> hint
Rule 10    hint -> BRA ELSE KET
Rule 11    hint -> BRA ELSE EQUALS ELSE KET
Rule 12    hint -> BRA KET
Rule 13    term -> tag
Rule 14    tag -> BRABRA ELSE KET tagcontentlist KET
Rule 15    tagcontentlist -> tagcontent
Rule 16    tagcontentlist -> tagcontent tagcontentlist
Rule 17    tagcontent -> else
Rule 18    tagcontent -> hint
Rule 19    tagcontent -> tag

Terminals, with rules where they appear

BRA                  : 10 11 12
BRABRA               : 14
ELSE                 : 7 10 11 11 14
EQUALS               : 8 11
ESCAPEDBRA           : 
KET                  : 10 11 12 14 14
error                : 

Nonterminals, with rules where they appear

else                 : 5 6 17
elselist             : 4 6
hint                 : 9 18
tag                  : 13 19
tagcontent           : 15 16
tagcontentlist       : 14 16
term                 : 2 3
termlist             : 1 3
text                 : 0


Parsing method: SLR


state 0

    (0) S' -> . text
    (1) text -> . termlist
    (2) termlist -> . term
    (3) termlist -> . term termlist
    (4) term -> . elselist
    (9) term -> . hint
    (13) term -> . tag
    (5) elselist -> . else
    (6) elselist -> . else elselist
    (10) hint -> . BRA ELSE KET
    (11) hint -> . BRA ELSE EQUALS ELSE KET
    (12) hint -> . BRA KET
    (14) tag -> . BRABRA ELSE KET tagcontentlist KET
    (7) else -> . ELSE
    (8) else -> . EQUALS

    BRA             shift and go to state 11
    BRABRA          shift and go to state 1
    ELSE            shift and go to state 10
    EQUALS          shift and go to state 7


    termlist                       shift and go to state 2
    hint                           shift and go to state 3
    text                           shift and go to state 4
    term                           shift and go to state 5
    else                           shift and go to state 6
    tag                            shift and go to state 8
    elselist                       shift and go to state 9

state 1

    (14) tag -> BRABRA . ELSE KET tagcontentlist KET

    ELSE            shift and go to state 12



state 2

    (1) text -> termlist .

    $               reduce using rule 1 (text -> termlist .)



state 3

    (9) term -> hint .

    $               reduce using rule 9 (term -> hint .)
    BRA             reduce using rule 9 (term -> hint .)
    ELSE            reduce using rule 9 (term -> hint .)
    EQUALS          reduce using rule 9 (term -> hint .)
    BRABRA          reduce using rule 9 (term -> hint .)



state 4

    (0) S' -> text .




state 5

    (2) termlist -> term .
    (3) termlist -> term . termlist
    (2) termlist -> . term
    (3) termlist -> . term termlist
    (4) term -> . elselist
    (9) term -> . hint
    (13) term -> . tag
    (5) elselist -> . else
    (6) elselist -> . else elselist
    (10) hint -> . BRA ELSE KET
    (11) hint -> . BRA ELSE EQUALS ELSE KET
    (12) hint -> . BRA KET
    (14) tag -> . BRABRA ELSE KET tagcontentlist KET
    (7) else -> . ELSE
    (8) else -> . EQUALS

    $               reduce using rule 2 (termlist -> term .)
    BRA             shift and go to state 11
    BRABRA          shift and go to state 1
    ELSE            shift and go to state 10
    EQUALS          shift and go to state 7


    term                           shift and go to state 5
    hint                           shift and go to state 3
    termlist                       shift and go to state 13
    else                           shift and go to state 6
    tag                            shift and go to state 8
    elselist                       shift and go to state 9

state 6

    (5) elselist -> else .
    (6) elselist -> else . elselist
    (5) elselist -> . else
    (6) elselist -> . else elselist
    (7) else -> . ELSE
    (8) else -> . EQUALS

  ! shift/reduce conflict for ELSE resolved as shift.
  ! shift/reduce conflict for EQUALS resolved as shift.
    $               reduce using rule 5 (elselist -> else .)
    BRA             reduce using rule 5 (elselist -> else .)
    BRABRA          reduce using rule 5 (elselist -> else .)
    ELSE            shift and go to state 10
    EQUALS          shift and go to state 7

  ! ELSE            [ reduce using rule 5 (elselist -> else .) ]
  ! EQUALS          [ reduce using rule 5 (elselist -> else .) ]

    elselist                       shift and go to state 14
    else                           shift and go to state 6

state 7

    (8) else -> EQUALS .

    $               reduce using rule 8 (else -> EQUALS .)
    BRA             reduce using rule 8 (else -> EQUALS .)
    ELSE            reduce using rule 8 (else -> EQUALS .)
    EQUALS          reduce using rule 8 (else -> EQUALS .)
    BRABRA          reduce using rule 8 (else -> EQUALS .)
    KET             reduce using rule 8 (else -> EQUALS .)



state 8

    (13) term -> tag .

    $               reduce using rule 13 (term -> tag .)
    BRA             reduce using rule 13 (term -> tag .)
    ELSE            reduce using rule 13 (term -> tag .)
    EQUALS          reduce using rule 13 (term -> tag .)
    BRABRA          reduce using rule 13 (term -> tag .)



state 9

    (4) term -> elselist .

    $               reduce using rule 4 (term -> elselist .)
    BRA             reduce using rule 4 (term -> elselist .)
    ELSE            reduce using rule 4 (term -> elselist .)
    EQUALS          reduce using rule 4 (term -> elselist .)
    BRABRA          reduce using rule 4 (term -> elselist .)



state 10

    (7) else -> ELSE .

    $               reduce using rule 7 (else -> ELSE .)
    BRA             reduce using rule 7 (else -> ELSE .)
    ELSE            reduce using rule 7 (else -> ELSE .)
    EQUALS          reduce using rule 7 (else -> ELSE .)
    BRABRA          reduce using rule 7 (else -> ELSE .)
    KET             reduce using rule 7 (else -> ELSE .)



state 11

    (10) hint -> BRA . ELSE KET
    (11) hint -> BRA . ELSE EQUALS ELSE KET
    (12) hint -> BRA . KET

    ELSE            shift and go to state 16
    KET             shift and go to state 15



state 12

    (14) tag -> BRABRA ELSE . KET tagcontentlist KET

    KET             shift and go to state 17



state 13

    (3) termlist -> term termlist .

    $               reduce using rule 3 (termlist -> term termlist .)



state 14

    (6) elselist -> else elselist .

    $               reduce using rule 6 (elselist -> else elselist .)
    BRA             reduce using rule 6 (elselist -> else elselist .)
    ELSE            reduce using rule 6 (elselist -> else elselist .)
    EQUALS          reduce using rule 6 (elselist -> else elselist .)
    BRABRA          reduce using rule 6 (elselist -> else elselist .)



state 15

    (12) hint -> BRA KET .

    $               reduce using rule 12 (hint -> BRA KET .)
    BRA             reduce using rule 12 (hint -> BRA KET .)
    ELSE            reduce using rule 12 (hint -> BRA KET .)
    EQUALS          reduce using rule 12 (hint -> BRA KET .)
    BRABRA          reduce using rule 12 (hint -> BRA KET .)
    KET             reduce using rule 12 (hint -> BRA KET .)



state 16

    (10) hint -> BRA ELSE . KET
    (11) hint -> BRA ELSE . EQUALS ELSE KET

    KET             shift and go to state 18
    EQUALS          shift and go to state 19



state 17

    (14) tag -> BRABRA ELSE KET . tagcontentlist KET
    (15) tagcontentlist -> . tagcontent
    (16) tagcontentlist -> . tagcontent tagcontentlist
    (17) tagcontent -> . else
    (18) tagcontent -> . hint
    (19) tagcontent -> . tag
    (7) else -> . ELSE
    (8) else -> . EQUALS
    (10) hint -> . BRA ELSE KET
    (11) hint -> . BRA ELSE EQUALS ELSE KET
    (12) hint -> . BRA KET
    (14) tag -> . BRABRA ELSE KET tagcontentlist KET

    ELSE            shift and go to state 10
    EQUALS          shift and go to state 7
    BRA             shift and go to state 11
    BRABRA          shift and go to state 1


    hint                           shift and go to state 21
    else                           shift and go to state 23
    tag                            shift and go to state 24
    tagcontentlist                 shift and go to state 20
    tagcontent                     shift and go to state 22

state 18

    (10) hint -> BRA ELSE KET .

    $               reduce using rule 10 (hint -> BRA ELSE KET .)
    BRA             reduce using rule 10 (hint -> BRA ELSE KET .)
    ELSE            reduce using rule 10 (hint -> BRA ELSE KET .)
    EQUALS          reduce using rule 10 (hint -> BRA ELSE KET .)
    BRABRA          reduce using rule 10 (hint -> BRA ELSE KET .)
    KET             reduce using rule 10 (hint -> BRA ELSE KET .)



state 19

    (11) hint -> BRA ELSE EQUALS . ELSE KET

    ELSE            shift and go to state 25



state 20

    (14) tag -> BRABRA ELSE KET tagcontentlist . KET

    KET             shift and go to state 26



state 21

    (18) tagcontent -> hint .

    KET             reduce using rule 18 (tagcontent -> hint .)
    ELSE            reduce using rule 18 (tagcontent -> hint .)
    EQUALS          reduce using rule 18 (tagcontent -> hint .)
    BRA             reduce using rule 18 (tagcontent -> hint .)
    BRABRA          reduce using rule 18 (tagcontent -> hint .)



state 22

    (15) tagcontentlist -> tagcontent .
    (16) tagcontentlist -> tagcontent . tagcontentlist
    (15) tagcontentlist -> . tagcontent
    (16) tagcontentlist -> . tagcontent tagcontentlist
    (17) tagcontent -> . else
    (18) tagcontent -> . hint
    (19) tagcontent -> . tag
    (7) else -> . ELSE
    (8) else -> . EQUALS
    (10) hint -> . BRA ELSE KET
    (11) hint -> . BRA ELSE EQUALS ELSE KET
    (12) hint -> . BRA KET
    (14) tag -> . BRABRA ELSE KET tagcontentlist KET

    KET             reduce using rule 15 (tagcontentlist -> tagcontent .)
    ELSE            shift and go to state 10
    EQUALS          shift and go to state 7
    BRA             shift and go to state 11
    BRABRA          shift and go to state 1


    hint                           shift and go to state 21
    else                           shift and go to state 23
    tag                            shift and go to state 24
    tagcontent                     shift and go to state 22
    tagcontentlist                 shift and go to state 27

state 23

    (17) tagcontent -> else .

    KET             reduce using rule 17 (tagcontent -> else .)
    ELSE            reduce using rule 17 (tagcontent -> else .)
    EQUALS          reduce using rule 17 (tagcontent -> else .)
    BRA             reduce using rule 17 (tagcontent -> else .)
    BRABRA          reduce using rule 17 (tagcontent -> else .)



state 24

    (19) tagcontent -> tag .

    KET             reduce using rule 19 (tagcontent -> tag .)
    ELSE            reduce using rule 19 (tagcontent -> tag .)
    EQUALS          reduce using rule 19 (tagcontent -> tag .)
    BRA             reduce using rule 19 (tagcontent -> tag .)
    BRABRA          reduce using rule 19 (tagcontent -> tag .)



state 25

    (11) hint -> BRA ELSE EQUALS ELSE . KET

    KET             shift and go to state 28



state 26

    (14) tag -> BRABRA ELSE KET tagcontentlist KET .

    $               reduce using rule 14 (tag -> BRABRA ELSE KET tagcontentlist KET .)
    BRA             reduce using rule 14 (tag -> BRABRA ELSE KET tagcontentlist KET .)
    ELSE            reduce using rule 14 (tag -> BRABRA ELSE KET tagcontentlist KET .)
    EQUALS          reduce using rule 14 (tag -> BRABRA ELSE KET tagcontentlist KET .)
    BRABRA          reduce using rule 14 (tag -> BRABRA ELSE KET tagcontentlist KET .)
    KET             reduce using rule 14 (tag -> BRABRA ELSE KET tagcontentlist KET .)



state 27

    (16) tagcontentlist -> tagcontent tagcontentlist .

    KET             reduce using rule 16 (tagcontentlist -> tagcontent tagcontentlist .)



state 28

    (11) hint -> BRA ELSE EQUALS ELSE KET .

    $               reduce using rule 11 (hint -> BRA ELSE EQUALS ELSE KET .)
    BRA             reduce using rule 11 (hint -> BRA ELSE EQUALS ELSE KET .)
    ELSE            reduce using rule 11 (hint -> BRA ELSE EQUALS ELSE KET .)
    EQUALS          reduce using rule 11 (hint -> BRA ELSE EQUALS ELSE KET .)
    BRABRA          reduce using rule 11 (hint -> BRA ELSE EQUALS ELSE KET .)
    KET             reduce using rule 11 (hint -> BRA ELSE EQUALS ELSE KET .)


